Linter: Rename `Shared` to `Ui`;

--- a/DnDCharCtor/DnDCharCtor.Pwa/wwwroot/index.html
+++ b/DnDCharCtor/DnDCharCtor.Pwa/wwwroot/index.html
@@ -6,8 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no, viewport-fit=cover" />
     <title>DnDCharCtor.Pwa</title>
     <base href="/" />
-    <link rel="stylesheet" href="_content/DnDCharCtor.Shared/bootstrap/bootstrap.min.css" />
-    <link rel="stylesheet" href="_content/DnDCharCtor.Shared/app.css" />
+    <link rel="stylesheet" href="_content/DnDCharCtor.Ui/bootstrap/bootstrap.min.css" />
+    <link rel="stylesheet" href="_content/DnDCharCtor.Ui/app.css" />
     <link rel="stylesheet" href="app.css" />
     <link href="DnDCharCtor.Pwa.styles.css" rel="stylesheet" />
     <link rel="icon" href="data:,">
