--- a/DnDCharCtor/DnDCharCtor.Pwa/wwwroot/index.html
+++ b/DnDCharCtor/DnDCharCtor.Pwa/wwwroot/index.html
@@ -12,6 +12,7 @@
     <link href="DnDCharCtor.Pwa.styles.css" rel="stylesheet" />
     <link rel="icon" href="data:,">
     <link href="manifest.webmanifest" rel="manifest" />
+    <link href="_content/Microsoft.FluentUI.AspNetCore.Components/css/reboot.css" rel="stylesheet" />
 </head>
 
 <body>
@@ -31,7 +32,10 @@
         <span class="dismiss">🗙</span>
     </div>
 
+    <script app-name="DnDCharCtor.Pwa" src="./_content/Microsoft.FluentUI.AspNetCore.Components/js/initializersLoader.webview.js"></script>
+
     <script src="_framework/blazor.webassembly.js"></script>
+    <script src="_content/Microsoft.FluentUI.AspNetCore.Components/Microsoft.FluentUI.AspNetCore.Components.lib.module.js" type="module" async></script>
     <script>navigator.serviceWorker.register('service-worker.js');</script>
 </body>
 
