WIP: WebAssembly makes Localization pain. In MAUI it loads all StringResources and I can change culture. But WASM only loads Default and Browser-Language;

--- a/DnDCharCtor/DnDCharCtor.Pwa/wwwroot/index.html
+++ b/DnDCharCtor/DnDCharCtor.Pwa/wwwroot/index.html
@@ -13,6 +13,7 @@
     <link rel="icon" href="data:,">
     <link href="manifest.webmanifest" rel="manifest" />
     <link href="_content/Microsoft.FluentUI.AspNetCore.Components/css/reboot.css" rel="stylesheet" />
+    <!--<link href="startup.js" />-->
 </head>
 
 <body>
