--- a/DnDCharCtor/DnDCharCtor.Pwa/wwwroot/index.html
+++ b/DnDCharCtor/DnDCharCtor.Pwa/wwwroot/index.html
@@ -34,7 +34,7 @@
     </div>
 
     <!--<script app-name="DnDCharCtor.Pwa" src="./_content/Microsoft.FluentUI.AspNetCore.Components/js/initializersLoader.webview.js"></script>-->
-
+    <!--<script src="startup.js"></script>-->
     <script src="_framework/blazor.webassembly.js"></script>
     <script src="_content/Microsoft.FluentUI.AspNetCore.Components/Microsoft.FluentUI.AspNetCore.Components.lib.module.js" type="module" async></script>
     <script>navigator.serviceWorker.register('service-worker.js');</script>
