--- a/DnDCharCtor/DnDCharCtor.Maui/wwwroot/index.html
+++ b/DnDCharCtor/DnDCharCtor.Maui/wwwroot/index.html
@@ -29,6 +29,10 @@
     <!--<script app-name="DnDCharCtor.Maui" src="./_content/Microsoft.FluentUI.AspNetCore.Components/js/initializersLoader.webview.js"></script>-->
 
     <script src="_framework/blazor.webview.js" autostart="false"></script>
+
+    <!-- Set the default theme -->
+    <script src="_content/Microsoft.FluentUI.AspNetCore.Components/js/loading-theme.js" type="text/javascript"></script>
+    <loading-theme storage-name="theme"></loading-theme>
     <script src="_content/Microsoft.FluentUI.AspNetCore.Components/Microsoft.FluentUI.AspNetCore.Components.lib.module.js" type="module" async></script>
 
 </body>
