WIP: Create New Projects for `Resources` and `Validation`;

--- a/DnDCharCtor/DnDCharCtor.Pwa/wwwroot/index.html
+++ b/DnDCharCtor/DnDCharCtor.Pwa/wwwroot/index.html
@@ -17,8 +17,8 @@
     <!--https://github.com/dotnet/runtime/issues/98415#issuecomment-2031216152-->
     <!--<link href="startup.js" />-->
     <!--https://github.com/dotnet/runtime/issues/98415#issuecomment-1948572748-->
-    <!--<link href="_framework/en-US/DnDCharCtor.Common.resources.wasm" />
-    <link href="_framework/de-DE/DnDCharCtor.Common.resources.wasm" />-->
+    <!--<link href="_framework/en-US/DnDCharCtor.Resources.wasm" />
+    <link href="_framework/de-DE/DnDCharCtor.Resources.wasm" />-->
 </head>
 
 <body>
