WIP: Virtual Keyboard hides input field. Also, there are problems with numeric input on Mobile (OnFocus or OnInput it deletes the input);
Comment: I know why I hate UI. Localization, Validation, UI, UX are only pain... The pain increases with various platforms and screen-sizes...;

--- a/DnDCharCtor/DnDCharCtor.Maui/wwwroot/index.html
+++ b/DnDCharCtor/DnDCharCtor.Maui/wwwroot/index.html
@@ -35,6 +35,7 @@
     <loading-theme storage-name="theme"></loading-theme>
     <script src="_content/Microsoft.FluentUI.AspNetCore.Components/Microsoft.FluentUI.AspNetCore.Components.lib.module.js" type="module" async></script>
 
+    <script src="_content/DnDCharCtor.Ui/scrollToInput.js"></script>
 </body>
 
 </html>
