--- a/DnDCharCtor/DnDCharCtor.Pwa/wwwroot/index.html
+++ b/DnDCharCtor/DnDCharCtor.Pwa/wwwroot/index.html
@@ -55,6 +55,8 @@
             return navigator.language || navigator.userLanguage; // For older browsers
         };
     </script>
+
+    <script src="_content/DnDCharCtor.Ui/scrollToInput.js"></script>
 </body>
 
 </html>
