--- a/DnDCharCtor/DnDCharCtor.Pwa/wwwroot/index.html
+++ b/DnDCharCtor/DnDCharCtor.Pwa/wwwroot/index.html
@@ -39,15 +39,15 @@
     </div>
 
     <!--<script app-name="DnDCharCtor.Pwa" src="./_content/Microsoft.FluentUI.AspNetCore.Components/js/initializersLoader.webview.js"></script>-->
+    <!--https://qiita.com/jsakamoto/items/0be0005d9b30acbfe1e4-->
+    <script src="_framework/blazor.webassembly.js"></script>
     <!--https://github.com/dotnet/runtime/issues/98415#issuecomment-2031216152-->
-    <script src="_framework/blazor.webassembly.js" autostart="false"></script>
-    <script src="startup.js"></script>
-
+    <!--<script src="startup.js"></script>-->
     <!-- Set the default theme -->
     <script src="_content/Microsoft.FluentUI.AspNetCore.Components/js/loading-theme.js" type="text/javascript"></script>
     <loading-theme storage-name="theme"></loading-theme>
     <script src="_content/Microsoft.FluentUI.AspNetCore.Components/Microsoft.FluentUI.AspNetCore.Components.lib.module.js" type="module" async></script>
-    
+
     <script>navigator.serviceWorker.register('service-worker.js');</script>
 
     <script>
