--- a/DnDCharCtor/DnDCharCtor.Pwa/wwwroot/index.html
+++ b/DnDCharCtor/DnDCharCtor.Pwa/wwwroot/index.html
@@ -46,12 +46,7 @@
     <script src="_content/Microsoft.FluentUI.AspNetCore.Components/Microsoft.FluentUI.AspNetCore.Components.lib.module.js" type="module" async></script>
 
     <script>navigator.serviceWorker.register('service-worker.js');</script>
-
-    <script>
-        window.getBrowserLanguage = function () {
-            return navigator.language || navigator.userLanguage; // For older browsers
-        };
-    </script>
+    <script src="getBrowserLanguage.js"></script>
 </body>
 
 </html>
