--- a/DnDCharCtor/DnDCharCtor.Pwa/wwwroot/index.html
+++ b/DnDCharCtor/DnDCharCtor.Pwa/wwwroot/index.html
@@ -46,7 +46,7 @@
     <script src="_content/Microsoft.FluentUI.AspNetCore.Components/Microsoft.FluentUI.AspNetCore.Components.lib.module.js" type="module" async></script>
 
     <script>navigator.serviceWorker.register('service-worker.js');</script>
-    <script src="getBrowserLanguage.js"></script>
+    <script src="getBrowserLanguage.js" type="text/javascript"></script>
 </body>
 
 </html>
