--- a/DnDCharCtor/DnDCharCtor.Maui/wwwroot/index.html
+++ b/DnDCharCtor/DnDCharCtor.Maui/wwwroot/index.html
@@ -34,6 +34,7 @@
     <loading-theme storage-name="theme"></loading-theme>
     <!--https://www.fluentui-blazor.net/CodeSetup-->
     <!--<script src="_content/Microsoft.FluentUI.AspNetCore.Components/Microsoft.FluentUI.AspNetCore.Components.lib.module.js" type="module" async></script>-->
+    <script src="_content/DnDCharCtor.Ui/addOpacityToBackground.js" type="text/javascript"></script>
 </body>
 
 </html>
