--- a/DnDCharCtor/DnDCharCtor.Pwa/wwwroot/index.html
+++ b/DnDCharCtor/DnDCharCtor.Pwa/wwwroot/index.html
@@ -37,7 +37,6 @@
     <script src="_framework/blazor.webassembly.js"></script>
     <!--https://github.com/dotnet/runtime/issues/98415#issuecomment-2031216152-->
     <!--<script src="startup.js"></script>-->
-
     <!-- Set the default theme -->
     <script src="_content/Microsoft.FluentUI.AspNetCore.Components/js/loading-theme.js" type="text/javascript"></script>
     <loading-theme storage-name="theme"></loading-theme>
@@ -47,6 +46,7 @@
 
     <script>navigator.serviceWorker.register('service-worker.js');</script>
     <script src="getBrowserLanguage.js" type="text/javascript"></script>
+    <script src="_content/DnDCharCtor.Ui/addOpacityToBackground.js" type="text/javascript"></script>
 </body>
 
 </html>
